--- a/style.css
+++ b/style.css
@@ -1,14 +1,97 @@
+body {
+    background-image: url(https://st.depositphotos.com/1540171/1209/i/950/depositphotos_12098754-stock-photo-backgrounds-of-color-full-bone.jpg);
+    background-size: cover;
 
-canvas {
- border: 2px solid black
 }
 
 .container {
-    max-width: 900px;
+    max-width: 75vw;
     margin: 0 auto;
 }
 
+
 .game-screen  {
-    width: 400px;
     height: 95vh;
+    display:flex;
+}
+
+.game-screen div {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+
+
+h3 {
+    font-size: 40px;
+    margin:0px;
+}
+
+canvas {
+ border: 2px solid black;
+ width: 600px;
+ 
+}
+
+img {
+
+    align-self:flex-end;
+    max-width: 100px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+p {
+    font-size: 30px;
+    margin-top: 0px;
+}
+
+.instructions {
+    display: flex;  
+    flex-direction: column;
+    flex: 1 1 auto;
+}
+
+.instructions div {
+    background-image: url(./img/inst_wallpapper.jpeg);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+
+h4{
+
+    margin-top: 30px;
+    font-size: 30px;
+
+}
+
+ul {
+    list-style-type: none
+}
+
+li {
+    font-size: 15px;
+}
+
+.screen {
+    border: 2px solid black;
+ width: 600px;
+}
+
+.poops img {
+    width: 50px;
+}
+
+.poops li {
+    display: flex;
+}
+
+.poops {
+    background-image: url(./img/bg.PNG); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
