--- a/style.css
+++ b/style.css
@@ -1,18 +1,53 @@
 body {
-    background-image: url(https://st.depositphotos.com/1540171/1209/i/950/depositphotos_12098754-stock-photo-backgrounds-of-color-full-bone.jpg);
+    background-color: #00fdc8;
     background-size: cover;
 
 }
 
 .container {
-    max-width: 75vw;
     margin: 0 auto;
+    display: flex;
+    font-family: 'Amatic SC', cursive;
+    font-weight: bold;
+    justify-content: center;
 }
 
+.screen{
+    background-color:#7c7ce0ff;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+button {
+    font-family: 'Amatic SC', cursive;
+    font-size: 65px;
+    text-align: center;
+    cursor: url(./img/mia-cursor.png), pointer;	
+
+}
+
+.game-end {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.game-over img {
+    width: 300px;
+    height: 300px;
+}
 
 .game-screen  {
     height: 95vh;
     display:flex;
+}
+
+h1 {
+    font-family: 'Amatic SC', cursive;
+    font-size: 100px;
+    text-align: center;
+    font-weight: bold;
 }
 
 .game-screen div {
@@ -21,31 +56,32 @@ body {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    margin-left: 30px;
+}
+
+.score{
+margin-top:53px;
+margin-bottom:30px;
 }
 
 
-
 h3 {
-    font-size: 40px;
+    font-family: 'Amatic SC', cursive;
+    font-size: 65px;
     margin:0px;
+    background-color: white;
 }
 
 canvas {
  border: 2px solid black;
  width: 600px;
- 
+  
 }
 
-img {
 
-    align-self:flex-end;
-    max-width: 100px;
-    margin-left: 30px;
-    margin-right: 30px;
-}
-
-p {
-    font-size: 30px;
+span {
+    font-family: 'Amatic SC', cursive;
+    font-size: 50px;
     margin-top: 0px;
 }
 
@@ -53,28 +89,34 @@ p {
     display: flex;  
     flex-direction: column;
     flex: 1 1 auto;
-}
-
-.instructions div {
-    background-image: url(./img/inst_wallpapper.jpeg);
-    background-size: contain;
+    background-image: url(./img/notebook1.png);
+    background-size:100% 80%;
     background-repeat: no-repeat;
+    margin-right:30px;
+    width: 300px;
+    padding:30px;
 }
 
+.instructions h4 {
+    margin-top: 100px;
+    margin-left: 40px;
+    margin-bottom:0px;
+}
 
 h4{
 
+    font-family: 'Amatic SC', cursive;
     margin-top: 30px;
-    font-size: 30px;
+    font-size: 50px;
 
 }
 
 ul {
-    list-style-type: none
+    list-style-type: circle
 }
 
 li {
-    font-size: 15px;
+    font-size: 35px;
 }
 
 .screen {
@@ -83,15 +125,20 @@ li {
 }
 
 .poops img {
-    width: 50px;
+    width: 70px;
 }
 
 .poops li {
     display: flex;
+    flex-direction: row;
+
 }
 
+
 .poops {
-    background-image: url(./img/bg.PNG); 
-    background-size: cover;
-    background-repeat: no-repeat;
+    display: flex;
+        /* align-self: flex-end; */
+        margin-bottom: 0px;
+        margin-top: auto;
+    
 }
